<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000">

        <android.support.v7.widget.Toolbar
            android:id="@+id/rootToolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="@string/app_name"/>

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/rootRefreshBtn"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:padding="16dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/ic_autorenew"
                    android:tint="@color/white"
                    tools:ignore="RtlHardcoded" />

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RadioGroup
            android:id="@+id/rootGroupSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <RadioButton
                android:id="@+id/rootServerSort"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:textColor="@color/btn_text_color"
                android:background="@drawable/btn_background"
                android:text="@string/root_server_sort"/>

            <RadioButton
                android:id="@+id/rootDateSort"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:textColor="@color/btn_text_color"
                android:background="@drawable/btn_background"
                android:text="@string/root_date_sort"/>

        </RadioGroup>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rootList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
